update settings and gitignore

--- a/superlists/.gitignore
+++ b/superlists/.gitignore
@@ -1,3 +1,11 @@
+### VisualStudioCode ###
+.vscode/*      # Maybe .vscode/**/* instead - see comments
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+
 geckodriver.log
 *.pyc
 *.sqlite3
